# rust-video-streaming

./: Cargo.toml  Trunk.toml  index.html  style.css
.cargo/: config.toml
src/: constants.rs  consumer.rs  context.rs  main.rs  producer.rs  utils.rs
