[package]
name = "rust-video-streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Navigator", "MediaDevices", "HtmlVideoElement", "MediaStreamConstraints", "MediaStream", "VideoTrack", "VideoEncoder", "VideoEncoderInit", "EncodedVideoChunk", "console", "VideoEncoderConfig", "MediaStreamTrackProcessor", "MediaStreamTrackProcessorInit", "MediaStreamTrack", "ReadableStream", "ReadableStreamGetReaderOptions", "ReadableStreamDefaultReader", "VideoFrame", "VideoDecoder", "VideoDecoderInit", "VideoDecoderConfig", "HtmlImageElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "EncodedVideoChunkInit", "EncodedVideoChunkType"] }
yew = { version = "0.21.0", features = ["csr"] }
